# scotty-resource

./: .gitignore  README.md  cabal.project  cabal.project.freeze  scotty-resource.cabal  stack.yaml
.github/workflows/: haskell.yml
src/Web/Scotty/Resource/: Trans.hs
