cabal-version:       3.0
name:                scotty-resource
version:             0.3.0.1
synopsis:            A Better way of modeling web resources.
description:         
                     Allows users of the Scotty web framework to model
                     resources more like the HTTP standard models them.
homepage:            https://github.com/owensmurray/scotty-resource
license:             Apache-2.0
license-file:        LICENSE
author:              Rick Owens
maintainer:          rick@owensmurray.com
copyright:           2025 Rick Owens
category:            Web
build-type:          Simple
extra-source-files:
  README.md
  LICENSE

common dependencies
  build-depends:
    , base         >= 4.14.3.0 && < 4.22
    , containers   >= 0.5.7.0  && < 0.8
    , http-types   >= 0.9.1    && < 0.13
    , scotty       >= 0.20.1   && < 0.23
    , text         >= 1.2.3.2  && < 2.2
    , transformers >= 0.5.6.2  && < 0.7
    , wai          >= 3.2.2.1  && < 3.3
    , unliftio     >= 0.2.0.0  && < 0.3

common warnings
  ghc-options:
    -Wmissing-export-lists
    -Wredundant-constraints
    -Wall

library
  import: dependencies, warnings
  exposed-modules:     
    Web.Scotty.Resource.Trans
  -- other-modules:
  other-extensions:    
    OverloadedStrings
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/taphu/scotty-resource.git

